# moosetash

./: LICENSE  README.md  pyproject.toml
benchmarks/: run_benchmarks.py
benchmarks/templates/: chevron.json  chevron.mustache  chevron.txt  skippable.mustache
moosetash/: __init__.py  context.py  exceptions.py  handlers.py  render.py  tokenizer.py  types.py
tests/: test_context.py  test_errors.py  test_escaping.py  test_handlers.py  test_missing_behaviour.py  test_render.py  test_spec.py  test_tokenizer.py  test_types.py
