[tool.poetry]
name = "moosetash"
version = "0.2.0"
description = "Mustache template renderer"
authors = ["Michael Curtis <michaelrccurtis@gmail.com>"]
repository = "https://github.com/michaelrccurtis/moosetash"
readme = "README.md"
keywords = ["mustache", "template", "text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"

[tool.poetry.group.benchmarks.dependencies]
chevron = {version = "^0.14.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
benchmark = "benchmarks.run_benchmarks:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.message_control]
disable = """,
  too-few-public-methods,
  singleton-comparison,
  import-error,
  no-name-in-module,
  no-member,
  super-init-not-called
"""

[tool.pylint.design]
ignored-argument-names="_.*|args|kwargs"
good-names="id,ex"

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 0
force_to_top =["typing"]
force_sort_within_sections = true
src_paths=["./moosetash"]

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.coverage.run]
omit = []
[tool.coverage.paths]
source=["moosetash/"]

[tool.coverage.report]
sort = 'Miss'
